<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NewReport">

        <!-- TODO: Update blank fragment layout -->

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_inputId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:ems="10"
            android:hint="@string/id"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_timePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:hint="Zeit Eingabe"
            android:inputType="none"
            android:minHeight="48dp"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/et_inputId" />

        <EditText
            android:id="@+id/et_datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="19dp"
            android:hint="Datums Eingabe"
            android:inputType="none"
            android:minHeight="48dp"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/et_timePicker"
            app:layout_constraintTop_toBottomOf="@+id/et_inputId" />

        <Switch
            android:id="@+id/switch_inputPositiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:minHeight="48dp"
            android:text="@string/positive"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/et_timePicker" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropdown_office"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/offices"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/switch_inputPositiv"
            app:startIconDrawable="@drawable/ic_baseline_house_24">

            <AutoCompleteTextView
                android:id="@+id/dropdown_place"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="none"
                android:text="@string/office1" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/btsave"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/dropdown_office" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>